# mltemplate

./: .gitignore  LEARN.md  README.md  cookiecutter.json  pyproject.toml
docs/starters/: audio-cnn.md  bert-chunks-imdb.md  bert-imdb.md  cnn-mnist.md  transformer-imdb.md
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: AGENTS.md  pyproject.toml
{{cookiecutter.project_slug}}/src/: __init__.py  configuration.toml  datasets.py  eval.py  main.py  models.py  train.py
{{cookiecutter.project_slug}}/src/_starters/audio_cnn/: configuration.toml  datasets.py  models.py
{{cookiecutter.project_slug}}/src/_starters/bert_chunks_imdb/: configuration.toml  datasets.py  models.py
{{cookiecutter.project_slug}}/src/_starters/bert_imdb/: configuration.toml  datasets.py  models.py
{{cookiecutter.project_slug}}/src/_starters/cnn_mnist/: configuration.toml  datasets.py  models.py
{{cookiecutter.project_slug}}/src/_starters/transformer_imdb/: configuration.toml  datasets.py  models.py
