[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_name }}"
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" }
]
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = [
    "torch",
    "tqdm",
    "wandb",
    "typer[all]",
    "rich",
    "matplotlib",
{%- if cookiecutter.starting_point == "cnn_mnist" %}
    "torchvision",
{%- elif cookiecutter.starting_point == "transformer_imdb" %}
    "datasets",
{%- elif cookiecutter.starting_point in ["bert_imdb", "bert_chunks_imdb"] %}
    "transformers",
    "datasets",
{%- elif cookiecutter.starting_point == "audio_cnn" %}
    "torchaudio",
{%- endif %}
]

[project.scripts]
{{ cookiecutter.project_slug }} = "src.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
